--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,5 @@
 <link rel="stylesheet" href="/css/main.css?v=<%= cssVersion %>" />
 <link rel="stylesheet" href="/css/nav-arrows.css?v=<%= cssVersion %>" />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+<!-- Self-hosted Chart.js (CSP-safe) -->
+<script src="/js/vendor/chart.min.js"></script>
